[gd_scene load_steps=7 format=3 uid="uid://pwe0uy0n54cu"]

[ext_resource type="Texture2D" uid="uid://imilr6qsmeuv" path="res://assets/images/backgrounds/static/login_select_level1.png" id="1_dby07"]
[ext_resource type="Script" uid="uid://duv2bmpnedvn1" path="res://levels/Login/select/LevelOption/leveloption.gd" id="2_1tws8"]
[ext_resource type="Theme" uid="uid://q80etp6d7a8u" path="res://assets/themes/LoginTextGuide.tres" id="2_llbvw"]
[ext_resource type="PackedScene" uid="uid://s84i5xh3ognd" path="res://levels/Login/select/LevelOption/ProgressTracker.tscn" id="4_qrpfi"]
[ext_resource type="AudioStream" uid="uid://bmsyc157m5bql" path="res://assets/audio/in_use/suntemple__magic-sfx-for-games.wav" id="5_gaxjm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tt2my"]
size = Vector2(1528.57, 1880)

[node name="LevelOption" type="Node2D"]
script = ExtResource("2_1tws8")

[node name="image" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_dby07")

[node name="Label" type="Label" parent="image"]
anchors_preset = -1
anchor_left = -0.0161797
anchor_top = -9.79004e-05
anchor_right = 0.316932
anchor_bottom = -9.79004e-05
offset_left = -698.571
offset_top = 897.286
offset_right = 281.429
offset_bottom = 1038.29
theme = ExtResource("2_llbvw")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 140
text = "抽蓄發電大作戰"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="P1ProgressTracker" parent="." instance=ExtResource("4_qrpfi")]
duration = 3.0

[node name="P2ProgressTracker" parent="." instance=ExtResource("4_qrpfi")]
duration = 3.0

[node name="OnTriggerSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_gaxjm")

[node name="PortalArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalArea"]
visible = false
position = Vector2(1.42871, 175.714)
scale = Vector2(0.7, 0.7)
shape = SubResource("RectangleShape2D_tt2my")
